# tinyagentos

./: .gitignore  CONTRIBUTING.md  README.md  install.sh  pyproject.toml  tinyagentos-rknn-sd.service  tinyagentos-sdcpp.service  tinyagentos.service
.github/: FUNDING.yml
app-catalog/: catalog.yaml
benchmarks/: longmemeval_granularity.py  longmemeval_recall.py  longmemeval_runner.py  model_shootout.py  overnight_results.md  realworld_agent_benchmark.py  realworld_results.json  taosmd_benchmark.py  taosmd_iteration5.py  taosmd_vs_qmd.py  test_llm_extraction.py  test_pi_llm_extraction.py
data/: .auth_local_token  agents.json  config.yaml  config.yaml.example  hardware.json  metrics.db
desktop/: chat.html  index.html  package-lock.json  package.json  tsconfig.json  tsconfig.tsbuildinfo  vite.config.ts  vitest.setup.ts
docs/: 2026-04-05-agent-framework-research.md  agent-qmd-serve-setup.md  chat-guide.md  getting-started.md  kv-quant-validator.md  mirror-policy.md
landing/: index.html
os-build/: README.md  build.sh
platform/: Caddyfile  DEPLOYMENT.md  README.md  install-lxc.sh  provision.sh
scripts/: build-worker.sh  disk-quota-scan.sh  fs-snapshot-install.sh  fs-snapshot-probe.sh  gen-release-notes.sh  host-firewall-down.sh  host-firewall-up.sh  incus-bridge-probe.sh  install-platform-lxc.sh  install-rknpu.sh  install-server.sh  install-worker.ps1  install-worker.sh  kiosk-setup.sh  kv_quant_validator.py  migrate-trace-paths.sh  mobile-screenshots.py  repair_providers.py  setup-mdns.sh  taos-deploy-helper.sh  taos-graceful-stop.sh  uninstall-worker.ps1  uninstall-worker.sh
static/: app.css  manifest-chat.json  manifest-desktop.json  manifest.json  sw.js
systemd/: taos-pre-shutdown.service  tinyagentos-disk-quota.service  tinyagentos-disk-quota.timer  tinyagentos-host-firewall.path  tinyagentos-host-firewall.service  tinyagentos-host-firewall.timer  tinyagentos.service
tests/: conftest.py  test_activity_route.py  test_admin_prompts.py  test_agent_bridge.py  test_agent_browsers.py  test_agent_chat_router.py  test_agent_env.py  test_agent_export_import.py  test_agent_image.py  test_agent_templates.py  test_agents_deploy_persona.py  test_agents_deploy_smoke.py  test_agents_memory_api.py  test_archive.py  (+187 more)
(+5382 files in other folders)
