[project]
name = "tinyagentos"
version = "0.1.0"
description = "Self-hosted AI agent memory system for low-power hardware"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "httpx>=0.27.0",
    "jinja2>=3.1.0",
    "pyyaml>=6.0",
    "aiosqlite>=0.20.0",
    "psutil>=5.9.0",
    "python-multipart>=0.0.9",
]

[project.optional-dependencies]
worker = ["pystray>=0.19.0", "Pillow>=10.0"]
proxy = ["litellm[proxy]>=1.50.0"]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23.0",
    "httpx",
]

[tool.setuptools.packages.find]
include = ["tinyagentos*"]

[project.scripts]
tinyagentos = "tinyagentos.app:main"
tinyagentos-worker = "tinyagentos.worker.__main__:main"
