[project]
name = "tinyagentos"
version = "0.1.0"
description = "Self-hosted AI agent memory system for low-power hardware"
license = { text = "AGPL-3.0-or-later" }
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "httpx>=0.27.0",
    "jinja2>=3.1.0",
    "pyyaml>=6.0",
    "aiosqlite>=0.20.0",
    "psutil>=5.9.0",
    "python-multipart>=0.0.9",
    # Model torrent mesh — every instance is a potential peer so
    # downloads distribute across the swarm rather than hammering a
    # single mirror. Worker install scripts install the OS-level
    # libtorrent-rasterbar as a prerequisite on each platform.
    "libtorrent>=2.0.9",
    # Memory system — standalone package, pulled from GitHub
    "taosmd @ git+https://github.com/jaylfc/taosmd.git@dev",
]

[project.optional-dependencies]
worker = ["pystray>=0.19.0", "Pillow>=10.0"]
proxy = ["litellm[proxy]>=1.50.0"]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23.0",
    "httpx",
]
e2e = [
    "pytest>=8.0",
    "pytest-playwright>=0.5.0",
]

[tool.setuptools.packages.find]
include = ["tinyagentos*"]

[project.scripts]
tinyagentos = "tinyagentos.app:main"
tinyagentos-worker = "tinyagentos.worker.__main__:main"
taos = "tinyagentos.app:main"
taos-gui = "tinyagentos.app:gui"

[tool.pytest.ini_options]
markers = [
    "e2e: End-to-end browser tests (require running server)",
]
